--- a/Exercice1-Recette.css
+++ b/Exercice1-Recette.css
@@ -58,20 +58,17 @@ p.categorie {
     font-weight: bold;
     font-size:16px;
 }
-div.categorie  {
-    
+div.categorie  {    
     margin-bottom: 0px;                
     margin-top: 0px;
     overflow: visible;
 }
 div.contenu{
     background-color: white;
-    margin: 60px 10% 50px 10%;
-    padding: 0px 30px 30px 30px;
-    min-width: 350px;    
+    margin: 40px 8px 40px 8px;
+    padding: 0px 8px 20px 8px;
     box-shadow: 0px 0px 8px 8px grey;
-    overflow: visible;
-
+    overflow: visible;  
 }
 h1{
     text-align: center;
@@ -107,19 +104,20 @@ table.info{
     position:absolute; 
     bottom:0;width:100%;            
     color:white; 
-    background-color: #6C829DC0; height: 80px;                 
+    background-color: #6C829DC0; 
+    height: 50px;
 }
 
 table.info td{
     text-align: center; 
-    font-size: 14px;                   
+    font-size: 12px;                   
     border-style: none;
     vertical-align: top;
 }
 
 table.info th{
     text-align: center; 
-    font-size: 16px;                   
+    font-size: 14px;                   
     font-weight: bold;
     border-style: none;
     vertical-align: bottom;
@@ -135,7 +133,7 @@ img.info{
 }
 
 div.colonne{
-    width: 45%;    
+    width: 100%;    
     margin-top: 20px;
 }
 
@@ -185,8 +183,48 @@ table.preparation tr {
 
 div.colonne1{  
     display :inline-block;        
-    margin-right: 10%; 
 } 
-div.colonne2{
-    float: right;    
-} 
+
+/* Section pour adapter le CSS en fonction de la taille de l'écran. 
+Comme les changements s'ajuste séquantiellement on va y inscrire les changements seulement. 
+On considere "ordinateur" si la largeur est de plus de 768px sinon on y va pour portable. 
+*/
+@media only screen and (min-width: 768px) {
+
+    div.contenu{
+        min-width: 350px; 
+        margin: 60px 10% 50px 10%;
+        padding: 0px 30px 30px 30px;     
+    }
+
+    table.info{
+        height: 80px;                 
+    }
+    
+    table.info td{
+        font-size: 14px;                   
+    }
+    
+    table.info th{
+        font-size: 16px;      
+    }
+
+    div.colonne1{  
+        display :inline-block;        
+        margin-right: 10%; 
+    } 
+    div.colonne2{
+        float: right;    
+    } 
+    div.colonne{
+        width: 45%;    
+    }
+
+    @media only screen and (min-width: 900px) {
+        div.contenu{
+            margin-left: auto;
+            margin-right: auto;
+            width: 645px;
+        }
+    }  
+}
